Verify feedback questions migration